--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "email dev"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
@@ -15,6 +16,7 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-email/components": "0.0.26",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -27,12 +29,15 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "resend": "^4.0.1-alpha.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "postcss": "^8",
+    "react-email": "3.0.2",
     "tailwindcss": "^3.4.1"
   }
 }
