--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "email": "email dev"
   },
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -31,13 +32,15 @@
     "react-icons": "^5.3.0",
     "resend": "^4.0.1-alpha.0",
     "sonner": "^1.5.0",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.4.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
     "postcss": "^8",
-    "react-email": "3.0.2",
+    "prisma": "^6.1.0",
     "tailwindcss": "^3.4.1"
   }
 }
