--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "next": "14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-datepicker": "^7.6.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
