--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,6 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "email": "email dev",
     "postinstall": "prisma generate && prisma db push"
   },
   "dependencies": {
@@ -25,7 +24,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.9.0",
     "lucide-react": "^0.446.0",
-    "next": "14.2.13",
+    "next": "^14.2.24",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-datepicker": "^7.6.0",
@@ -34,7 +33,6 @@
     "react-icons": "^5.3.0",
     "resend": "^4.0.1-alpha.0",
     "sonner": "^1.5.0",
-    "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.4.0",
