--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,10 @@
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@react-email/components": "0.0.26",
-    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -32,15 +29,12 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "resend": "^4.0.1-alpha.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "twilio": "^5.4.0",
-    "uuid": "^11.0.3"
+    "twilio": "^5.4.0"
   },
   "devDependencies": {
-    "postcss": "^8",
     "prisma": "^6.1.0",
     "tailwindcss": "^3.4.1"
   }
